# Copyright (C) 2007 Andrew Schofield <the.uncle.fungus@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = icons

EXTRA_DIST = \
	dialog_icon.png \
	list_client_asynch.png \
	list_client_inaccessible.png \
	list_client_inactive.png \
	list_client_ok.png \
	list_client_stopped.png \
	list_down_arrow.png \
	list_up_arrow.png \
	main_icon.png

fahmondistpixdir = $(datadir)/pixmaps/fahmon
fahmondistpix_DATA = dialog_icon.png list_client_asynch.png list_client_inaccessible.png list_client_inactive.png list_client_ok.png list_client_stopped.png list_down_arrow.png list_up_arrow.png main_icon.png