# Copyright (C) 2007-9 Andrew Schofield <andrew_s@fahmon.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
	aboutDialog.h \
	base64Codec.h \
	benchmark.h \
	benchmarksDialog.h \
	benchmarksManager.h \
	clientDialog.h \
	client.h \
	clientHelperThread.h \
	clientsManager.h \
	core.h \
	dataInputStream.h \
	dataOutputStream.h \
	eta.h \
	fahlogAnalyzer.h \
	fahmon.h \
	fahmonConsts.h \
	fahmonTypes.h \
	firstTimeDialog.h \
	htmlParser.h \
	httpDownloader.h \
	listViewClients.h \
	mainDialog.h \
	main.h \
	messagesFrame.h \
	messagesManager.h \
	multiProtocolFile.h \
	queue.h \
	pathManager.h \
	preference.h \
	preferencesDialog.h \
	preferencesManager.h \
	progressManager.h \
	project.h \
	projectHelperThread.h \
	projectsManager.h \
	resource.h \
	staticBoldedText.h \
	tools.h \
	trayManager.h \
	workUnitFrame.h \
	webMonitor.h
