# Copyright (C) 2007-9 Andrew Schofield <andrew_s@fahmon.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
  amigaos.h \
  dict.h \
  hostasyn.c \
  inet_ntoa_r.h \
  multiif.h \
  speedcheck.c \
  strtoofft.h \
  arpa_telnet.h \
  easy.c \
  hostip4.c \
  inet_ntop.c \
  netrc.c \
  speedcheck.h \
  telnet.c \
  base64.c \
  easyif.h \
  hostip6.c \
  inet_ntop.h \
  netrc.h \
  splay.c \
  telnet.h \
  base64.h \
  escape.c \
  hostip.c \
  inet_pton.c \
  parsedate.c \
  splay.h \
  tftp.c \
  ca-bundle.h \
  escape.h \
  hostip.h \
  inet_pton.h \
  parsedate.h \
  ssh.c \
  tftp.h \
  config-amigaos.h \
  file.c \
  hostsyn.c \
  krb4.c \
  progress.c \
  ssh.h \
  timeval.c \
  config-mac.h \
  file.h \
  hostthre.c \
  krb4.h \
  progress.h \
  sslgen.c \
  timeval.h \
  config-riscos.h \
  formdata.c \
  http.c \
  ldap.c \
  security.c \
  sslgen.h \
  transfer.c \
  config-tpf.h \
  formdata.h \
  http_chunks.c \
  ldap.h \
  select.c \
  ssluse.c \
  transfer.h \
  config-win32ce.h \
  ftp.c \
  http_chunks.h \
  llist.c \
  select.h \
  ssluse.h \
  url.c \
  config-win32.h \
  ftp.h \
  http_digest.c \
  llist.h \
  sendf.c \
  strdup.c \
  urldata.h \
  connect.c \
  getenv.c \
  http_digest.h \
  sendf.h \
  strdup.h \
  url.h \
  connect.h \
  getinfo.c \
  http.h \
  md5.c \
  setup.h \
  strequal.c \
  version.c \
  content_encoding.c \
  getinfo.h \
  http_negotiate.c \
  md5.h \
  setup_once.h \
  strequal.h \
  content_encoding.h \
  gtls.c \
  http_negotiate.h \
  memdebug.c \
  share.c \
  strerror.c \
  cookie.c \
  gtls.h \
  http_ntlm.c \
  memdebug.h \
  share.h \
  strerror.h \
  cookie.h \
  hash.c \
  http_ntlm.h \
  memory.h \
  sockaddr.h \
  strtok.c \
  curlx.h \
  hash.h \
  if2ip.c \
  mprintf.c \
  socks.c \
  strtok.h \
  dict.c \
  hostares.c \
  if2ip.h \
  multi.c \
  socks.h \
  strtoofft.c



